# AgentForge

./: .gitignore  CLAUDE.md  README.md  _verify_mock_fix.py  mkdocs.yml  pyproject.toml
agentforge/: __init__.py  agent.py
agentforge/config/: __init__.py  settings.py
agentforge/context/: __init__.py  compressor.py  estimator.py  prompt_caching.py
agentforge/core/: __init__.py  async_utils.py  execution.py  iteration_budget.py  model_metadata.py  stream_accumulator.py
agentforge/delegation/: __init__.py  config.py  manager.py
agentforge/events/: __init__.py  emitter.py  types.py
agentforge/ext/: __init__.py
agentforge/hooks/: __init__.py
agentforge/interrupt/: __init__.py
agentforge/managers/: __init__.py  message.py  tool_orchestrator.py
agentforge/mcp/: __init__.py  client.py  config.py  errors.py  manager.py  pool.py  tool.py  transport.py  types.py
agentforge/memory/: __init__.py  base.py  extractor.py  manager.py  memory_store.py  memory_store_base.py  scrubber.py
agentforge/metrics/: __init__.py  collector.py  prometheus.py
agentforge/profiles/: __init__.py  profile.py  registry.py
agentforge/providers/: __init__.py  base.py  client_factory.py  custom.py  profile.py  registry.py  stream_timeout.py
agentforge/session/: __init__.py  base.py  info.py
agentforge/skills/: __init__.py  loader.py  registry.py
agentforge/tools/: __init__.py  base.py  checkpoint.py  executor.py  guardrails.py  toolsets.py
agentforge/types/: __init__.py  errors.py  responses.py  tools.py
agentforge/utils/: __init__.py  logging.py  model_metadata.py  platform.py
demo/: README.md  __init__.py  config.py  config.yaml  expert_profiles.yaml  mcp_config.yaml  mcp_demo.py  run_repl.py  test_agent_mcp.py  test_bing_mcp.py  test_http_direct.py  test_remote_mcp.py  utils.py
demo/scenarios/: 01_streaming.py  02_tools.py  03_memory.py  04_delegation.py  05_code_assistant.py  06_research_assistant.py  07_knowledge_management.py  08_multi_agent.py  09_expert_agent.py  __init__.py
demo/tools/: __init__.py  demo_tools.py
docs/: changelog.md  getting-started.md  index.md
docs/api-reference/: agent.md  core.md  events.md  memory.md  metrics.md  providers.md  session.md  tools.md  types.md
docs/guides/: memory-extension.md
docs/user-guide/: agent.md  async.md  custom-providers.md  memory.md  profiles.md  streaming.md  tools.md
hai_agent/: __init__.py  agent.py
hai_agent/config/: __init__.py  secrets.py  settings.py
hai_agent/context/: __init__.py  (+2 more)
tests/: test_agent_profile.py  test_async_api.py  test_checkpoint.py  test_concurrent.py  test_convenience.py  test_custom_provider.py  test_integration.py  test_integration_live.py  test_integration_tools.py  test_mcp_client.py  test_mcp_config.py  test_mcp_manager.py  test_mcp_pool.py  test_mcp_tool.py  test_mcp_transports.py  test_mcp_types.py  test_memory_system.py  test_metrics.py  test_model_metadata.py  test_ollama_provider.py  test_p0_types_config.py  test_p1_provider_transport.py  test_p2_interrupt_events.py  test_p3_tools.py  test_p4_agent.py  test_p5_delegation.py  test_p6_memory_skills.py  test_p7_p8_builtins.py  test_production.py  test_profile_delegation.py  test_profile_registry.py  test_prometheus.py  test_provider_registry.py  test_rate_limiter.py  test_session.py  test_session_integration.py  test_stream_accumulator.py  test_stream_timeout.py  test_streaming.py  test_todo_items.py  (+1 more)
(+138 files in other folders)
